fix pre-wrap
--HG--
branch : gloda-facet
extra : rebase_source : b7f31d4914727ae4ed25915cd3c389119f9ab345

--- a/mail/base/content/glodaFacetView.css
+++ b/mail/base/content/glodaFacetView.css
@@ -496,6 +496,7 @@ h1, h2, h3 {
   padding-left: 1em;
   font-family: monospace;
   font-size: 110%;
+  white-space: pre-wrap;
 }
 
 .message-tag {
